# minecraft-clone

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresetsTemplate.json  README.md
src/: CMakeLists.txt  main.cpp
src (old)/: CMakeLists.txt
src (old)/game_engine/src/lib/defines/: config.hpp
src (old)/game_engine/src/lib/display/: display.cpp
src (old)/game_engine/src/lib/rendering/: state.cpp  state.hpp
src (old)/game_engine/src/lib/rendering/buffers/: ebo.hpp  vbo.cpp  vbo.hpp
src (old)/game_engine/src/lib/rendering/shaders/: shaders.cpp  shaders.hpp
src (old)/game_engine/src/lib/rendering/shaders/generic_triangle_mesh/: load.hpp  main_frag.frag  main_vert.vert
src (old)/game_engine/src/lib/rendering/textures/: texture.cpp  texture.hpp
src (old)/game_engine/src/lib/utils/: error_handling.hpp  time.hpp
src (old)/game_engine/src/tests/renderer/: generic_triangle_mesh_shader.cpp
src/game_engine/: CMakeLists.txt  README.md  game_engine.cpp  game_engine.cppm
src/game_engine/src/lib/defines/: config.hpp  typedefs.hpp
src/game_engine/src/lib/defines/configs/: error_handling_conf.hpp  glew_conf.hpp  logger_conf.hpp  shader_conf.hpp
src/game_engine/src/lib/display/: display.cpp  display.hpp
src/game_engine/src/lib/rendering/: README.md  load_shaders.hpp (IGNORE)  shaders.cpp  shaders.hpp
src/game_engine/src/lib/rendering/buffers/: state.hpp  vao.hpp
src/game_engine/src/lib/rendering/shaders/: const_colour.frag  pass_through.vert  shaders.cpp  shaders.hpp
src/game_engine/src/lib/rendering/shaders/generic_triangle_mesh/: load.hpp
src/game_engine/src/lib/rendering/textures/: texture.hpp
src/game_engine/src/lib/utils/: error_handling.hpp  logging.hpp  time.hpp
src/game_engine/src/tests/: test_gl_draw_triangle.cpp  test_gl_draw_triangle_old.cpp  test_sdl2_gl.cpp
src/game_engine/src/tests/standalone_tests/: test_SDL_gl_draw_triangle.cpp  test_glfw_draw_triangle.cpp
src/libs/stb_image/: CMakeLists.txt  stb_image.cppm
src/mods/base/: CMakeLists.txt  mods_base.cpp  mods_base.cppm
