add_subdirectory("game_engine")
add_subdirectory("mods")
add_subdirectory("libs")

add_executable(main main.cpp)
target_link_libraries(main PRIVATE game_engine)
target_link_libraries(main PRIVATE stb_image)
target_link_libraries(main PRIVATE OpenGL::OpenGL)
target_link_libraries(main PRIVATE GLEW::GLEW)
target_link_libraries(main PRIVATE glm::glm)
target_link_libraries(main PRIVATE glfw)
target_link_libraries(main PRIVATE spdlog::spdlog)